--- a/Page/Connexion/Connexion.css
+++ b/Page/Connexion/Connexion.css
@@ -53,19 +53,6 @@ input:hover {
     zoom: 100%;
 }
 
-#footer {
-    border: 2px solid black;
-    display: flex;
-    justify-content: space-between;
-    margin-left: auto;
-    margin-right: auto;
-    width: 410px;
-    height: 30px;
-    padding: 10px;
-    border-radius: 5px;
-    margin-top: 40px;
-}
-
 #Copyright {
     font-weight: bold;
     margin: auto;
@@ -96,6 +83,64 @@ input:hover {
     margin-top: 3px;
 }
 
-#status {
-    text-align: center;
+
+#footer {
+    border: 2px solid black;
+    display: flex;
+    justify-content: space-between;
+    margin-left: auto;
+    margin-right: auto;
+    width: 430px;
+    height: 30px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 5px;
+    margin-top: 40px;
 }
+
+/*Waves*/
+
+.waves {
+    position: relative;
+    width: 100%;
+    height: 40px;
+    min-height: 40px;
+    margin-bottom: -7px;
+    /*Fix for safari gap*/
+    max-height: 400px;
+}
+
+/* Animation */
+.parallax>use {
+    animation: move-forever 25s cubic-bezier(.55, .5, .45, .5) infinite;
+}
+
+.parallax>use:nth-child(1) {
+    animation-delay: -2s;
+    animation-duration: 7s;
+}
+
+.parallax>use:nth-child(2) {
+    animation-delay: -3s;
+    animation-duration: 10s;
+}
+
+.parallax>use:nth-child(3) {
+    animation-delay: -4s;
+    animation-duration: 13s;
+}
+
+.parallax>use:nth-child(4) {
+    animation-delay: -5s;
+    animation-duration: 20s;
+}
+
+@keyframes move-forever {
+    0% {
+      transform: translate3d(-90px, 0, 0);
+    }
+    100% {
+      transform: translate3d(85px, 0, 0);
+    }
+}
+
